css/style.css
body {
    /* display:flex;
    flex-direction:column;
     */
     margin: 0;
     padding: 0;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
}


header nav {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    background-color: #1f2937;
    color: white;
    margin: 0;
    padding: 8px 0;
}

header h2 {
    font-size: 24px;
    color: #F9FAF8;
    margin: 0;
}

nav ul{
    list-style: none;
    display: flex;
    align-items: flex-end;
    gap: 20px;
}
ul li a{
    text-decoration: none;
    font-size: 18px;
    color: #E5E7EB;
}

.intro {
   background-color: #1f2937;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 64px;
   padding: 100px;
}

.info {
   font-size: 18px;
   color: #E5E7EB; 
}

.info h1{
    font-size: 48px;
    font-weight: 800;
    color: #F9FAF8;
}

.intro img{
    height: auto;
    width: 500px;
}

.info button {
    background-color: #3882f6;
    font-size: 18px;
    font-weight: bold;
    color: #E5E7EB; 
    padding: 8px 32px;
    border-radius: 10px;
    border: 0;
}

.container {
    text-align: center;
    height: 400px;
}

.container h2 {
    color: #1f2937;
    margin: 50px;
    font-size: 36px;
    font-weight: 800;
}

.card_list {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    color: #1f2937;
    font-size: 16px;
    margin-top: 2px;
}

.card {
    width: 150px;
}

.card img{
    border: 4px solid #3882f6;
    border-radius: 10px;
    width: 150px;
    height: 150px;
    margin: 0 0 8px 0;
    padding: 0;
}


.quote {
    background-color: #e5e7eb;
    color: #1f2937;
    font-size: 36px;
    font-style: italic;
    padding: 100px;
    height: 300px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.quote .author {
    font-style: normal;
    font-weight: bold;
    align-self: flex-end;
    font-size: 24px;
}

.bottom {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 400px;
}

.sign_up {
    background-color: #3882f6;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 60px 120px;
    border-radius: 10px;
    color: #E5E7EB;
    gap: 20px;
}

.sign_up h2, p {
    margin: 0;
}

.sign_up button {
    background-color: #3882f6;
    border: 2px solid #E5E7EB;
    border-radius: 10px;
    padding: 8px 32px;
    color: #E5E7EB;
    font-weight: bold;
    font-size: 16px;
}

footer {
    background-color: #1f2937;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #E5E7EB;
    padding: 30px;
}

